@startuml

class LicensePlate {
    - plate_number: string
    + get_last_digit(): int
    + is_plate_valid(plate_number: str): bool
}

class Predictor {
    - restriction_strategy: RestrictionStrategy
    + set_restriction_Strategy(strategy: RestrictionStrategy): void
    + can_drive(plate: LicensePlate, date: Date): bool
}

interface RestrictionStrategy {
    + get_calendar(): Map<DayOfWeek, Set<int>>
    + is_restricted(plate: LicensePlate, date: Date, time: time): bool
}

class QuitoStrategy {
    - hour_ranges: List<HourRange>
    + get_calendar(): Map<DayOfWeek, Set<int>>
    + is_restricted(plate: LicensePlate, date: Date): bool
}

class HourRange {
    - start_hour: time
    - end_hour: time
    + contains(time: time): bool
}

enum DayOfWeek {
    MONDAY
    TUESDAY
    WEDNESDAY
    THURSDAY
    FRIDAY
    SATURDAY
    SUNDAY
    HOLIDAY
    + from_date(date: Date): DayOfWeek
}

QuitoStrategy ..|> RestrictionStrategy
Predictor o-- RestrictionStrategy
RestrictionStrategy ..> LicensePlate
QuitoStrategy --> HourRange

@enduml